2011-12-09	Ralf Corsépius <ralf.corsepius@rtems.org>

	* console/vgacons.c: Add VGACONS_STATIC.
	* console/vgacons.h: Remove VGACONS_STATIC.

2011-11-18	Jennifer Averett <Jennifer.Averett@OARcorp.com>

	PR 1925
	* Makefile.am, preinstall.am, console/serial_mouse_config.c,
	include/bsp.h, start/start.S: Converted 1386 console to the libchip
	style console
	* console/conscfg.c, console/console_control.c,
	console/printk_support.c, console/vgacons.c, console/vgacons.h: New
	files.

2011-10-17	Ralf Corsépius <ralf.corsepius@rtems.org>

	* ne2000/ne2000.c: Remove unused var "stat".

2011-08-29	Joel Sherrill <joel.sherrilL@OARcorp.com>

	* configure.ac: Formatting. Remove duplication BSP_HAS_SMP.

2011-08-01	Jennifer Averett <Jennifer.Averett@OARcorp.com>

	PR 1802
	* Makefile.am, configure.ac, preinstall.am, clock/ckinit.c,
	start/start16.S, startup/bspstart.c, startup/ldsegs.S: Add SMP
	support for i386.

2011-07-20	Jennifer Averett <Jennifer.Averett@OARcorp.com>

	* start/start16.S: Removed tabs and added OAR standard copyright header
	in preperation for merging SMP support.

2011-07-14	Jennifer Averett <Jennifer.Averett@OARcorp.com>

	* start/start.S: Moved enable_sse into a subroutine that may be called
	from other cores on an SMP system.

2011-07-14	Till Straumann <strauman@slac.stanford.edu>

	PR 1833/bsps
	* ne2000/ne2000.c: Addition of multicast support disabled broadcast
	reception. Patch also includes support to work on big endian CPUs.

2011-07-14	Jennifer Averett

	* make/custom/pcp4.cfg: New file.

2011-06-19	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Fix broken path to clockdrv_shell.h.

2011-04-11	Keith Robertson <kjrobert at alumni dot uwaterloo dot ca>

	* ne2000/ne2000.c: Add multicast support.  Patch submitted to mailing
	list 2005-12-21.

2011-03-16	Jennifer Averett <jennifer.averett@OARcorp.com>

	PR 1729/cpukit
	* Makefile.am, configure.ac: Add next step in SMP support. This adds an