@@ -157,7 +157,7 @@ static bool pc386_ide_status_data_ready (uint32_t          port,
 /*=========================================================================*\
 | Function:                                                                 |
 \*-------------------------------------------------------------------------*/
-bool pc386_ide_probe
+static bool pc386_ide_probe
 (
 /*-------------------------------------------------------------------------*\
 | Purpose:                                                                  |
@@ -180,7 +180,7 @@ bool pc386_ide_probe
 /*=========================================================================*\
 | Function:                                                                 |
 \*-------------------------------------------------------------------------*/
-void pc386_ide_initialize
+static void pc386_ide_initialize
 (
 /*-------------------------------------------------------------------------*\
   | Purpose:                                                                  |
@@ -433,7 +433,7 @@ void pc386_ide_initialize
 /*=========================================================================*\
 | Function:                                                                 |
 \*-------------------------------------------------------------------------*/
-void pc386_ide_read_reg
+static void pc386_ide_read_reg
 (
 /*-------------------------------------------------------------------------*\
 | Purpose:                                                                  |
@@ -470,7 +470,7 @@ void pc386_ide_read_reg
 /*=========================================================================*\
 | Function:                                                                 |
 \*-------------------------------------------------------------------------*/
-void pc386_ide_write_reg
+static void pc386_ide_write_reg
 (
 /*-------------------------------------------------------------------------*\
 | Purpose:                                                                  |
@@ -503,7 +503,7 @@ void pc386_ide_write_reg
 /*=========================================================================*\
 | Function:                                                                 |
 \*-------------------------------------------------------------------------*/
-void pc386_ide_read_block
+static void pc386_ide_read_block
 (
 /*-------------------------------------------------------------------------*\
 | Purpose:                                                                  |
@@ -582,7 +582,7 @@ void pc386_ide_read_block
 /*=========================================================================*\
 | Function:                                                                 |
 \*-------------------------------------------------------------------------*/
-void pc386_ide_write_block
+static void pc386_ide_write_block
 (
 /*-------------------------------------------------------------------------*\
 | Purpose:                                                                  |
@@ -660,7 +660,7 @@ void pc386_ide_write_block
 /*=========================================================================*\
 | Function:                                                                 |
 \*-------------------------------------------------------------------------*/
-int pc386_ide_control
+static int pc386_ide_control
 (
 /*-------------------------------------------------------------------------*\
 | Purpose:                                                                  |
@@ -683,7 +683,7 @@ int pc386_ide_control
 /*=========================================================================*\
 | Function:                                                                 |
 \*-------------------------------------------------------------------------*/
-rtems_status_code pc386_ide_config_io_speed
+static rtems_status_code pc386_ide_config_io_speed
 (
 /*-------------------------------------------------------------------------*\
 | Purpose:                                                                  |
